gitops/apps/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend
spec:
  stripPrefix:
    prefixes:
      - /frontend
