gitops/apps/frontend/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/frontend/`)
      middlewares:
        - name: frontend
      services:
        - kind: Service
          name: frontend
          port: frontend
